# OpenWorld-TreeHealth-Speciation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  datasette.yml  docker-compose.yml  hatch.toml  mkdocs.yml  pyproject.toml  test.db.csv  test.html  test_forest.db.csv  test_report.html  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
docs/: architecture.md  cli_usage.md  dashboard_guide.md  dev.md  index.md  ops.md  security.md  user.md
mlruns/0/: meta.yaml
mlruns/101743060906453027/: meta.yaml
mlruns/101743060906453027/049dc7f2951f457ea627447c266ae475/: meta.yaml
mlruns/101743060906453027/049dc7f2951f457ea627447c266ae475/tags/: mlflow.source.git.commit
mlruns/101743060906453027/13fa22fe23f34d81a735456af5547c21/: meta.yaml
mlruns/101743060906453027/1e0b7da4aefd488782d49b4daf004d5c/: meta.yaml
mlruns/101743060906453027/1e0b7da4aefd488782d49b4daf004d5c/tags/: mlflow.source.name
mlruns/101743060906453027/bd40bf1224904cffaca07295bee45205/: meta.yaml
mlruns/101743060906453027/cf604fa06b274da883f974f1f0a97c66/: meta.yaml
mlruns/101743060906453027/cf604fa06b274da883f974f1f0a97c66/params/: out_dir
mlruns/101743060906453027/cf604fa06b274da883f974f1f0a97c66/tags/: mlflow.runName
openworld_tshm/: __init__.py  __main__.py  cli.py  config.py  logging.py  plugin_loader.py  provenance.py  schemas.py
openworld_tshm/agents/: forest_agent.py  openai_agent.py
openworld_tshm/dashboard/: server.py
openworld_tshm/dashboard/static/: app.js  index.html  styles.css
openworld_tshm/gis/: decision.py  export.py  layers.py
openworld_tshm/ml/: data_prep.py  evaluate.py  features.py  models.py  models_advanced.py  train.py
openworld_tshm/plugins/: __init__.py  base.py  field_csv.py  lidar_laspy.py  multispectral_rasterio.py
openworld_tshm/pointcloud/: chm.py  features.py  io.py  segmentation.py
openworld_tshm/reports/: generate.py
openworld_tshm/utils/: geometry.py  hashing.py  io.py
scripts/: benchmark.sh  datasette_publish.sh  mlflow_ui.py  publish.sh  run_dashboard.sh  smoke.sh  train.sh
src/openworld_treehealth/: __init__.py  app.py  config.py
src/openworld_treehealth/routers/: diagnose.py  health.py  species.py
src/openworld_treehealth/services/: openai_client.py
test_artifacts/: config.json  height_model.pkl  metrics.json  species_model.pkl
tests/: test_agent_and_dashboard_index.py  test_chm.py  test_cli.py  test_cli_args.py  test_cli_more.py  test_coverage_boost.py  test_dashboard.py  test_diagnose.py  test_geometry.py  test_gis.py  test_health.py  test_metrics.py  test_ml_reproducible.py  test_ml_thresholds.py  test_models.py  test_openai_agent.py  test_plugin_loader.py  test_plugins.py  test_provenance.py  test_reports.py  test_schemas.py  test_security.py  test_species.py  test_utils_and_more.py
tests/e2e/: test_cli_e2e.py
tests/integration/: test_cli_workflow.py
