[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "openworld-tshm"
version = "0.2.1"
description = "OpenWorld Tree Speciation & Health Monitoring"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Nik Jois", email="nikjois@llamasearch.ai"}]
keywords = [
  "forestry", "lidar", "point-cloud", "canopy-height-model", "machine-learning",
  "gis", "fastapi", "datasette", "plugins", "provenance", "openai", "agents"
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.4",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.114",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "sqlite-utils>=3.36",
  "datasette>=0.64",
  "httpx>=0.27",
  "pluggy>=1.5",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = ["openai>=1.40", "llm>=0.13.1"]
geo = ["geopandas>=0.14", "shapely>=2.0"]
sensors = ["rasterio>=1.3", "laspy>=2.5"]
dev = ["pytest>=8.3", "pytest-cov>=5.0", "tox>=4.15", "ruff>=0.5", "mypy>=1.10", "black>=24.4", "prometheus-client>=0.20", "mkdocs>=1.6", "matplotlib>=3.8", "mlflow>=2.15", "xgboost>=2.1"]
all = [
  "openai>=1.40", "llm>=0.13.1",
  "numpy>=1.26","pandas>=2.2","scikit-learn>=1.4","joblib>=1.4","pydantic>=2.7",
  "typer>=0.12","rich>=13.7","rasterio>=1.3","laspy>=2.5","geopandas>=0.14","shapely>=2.0",
  "fastapi>=0.114","uvicorn>=0.30","jinja2>=3.1","sqlite-utils>=3.36","datasette>=0.64",
  "httpx>=0.27","pluggy>=1.5","python-dotenv>=1.0"
]

[project.scripts]
openworld-tshm = "openworld_tshm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["openworld_tshm"]

[tool.ruff]
line-length = 100
extend-select = ["I", "F", "E", "W"]
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","W","I","B","C4","ISC","PIE","PT","Q","RET","SIM","PTH","UP","D"]
ignore = ["D100","D101","D102","D103","D104","D105","D107"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=openworld_tshm --cov-report=term-missing --cov-fail-under=93"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310"]

[project.entry-points."openworld_tshm.plugins"]
lidar_laspy = "openworld_tshm.plugins.lidar_laspy:LidarLaspyPlugin"
multispectral_rasterio = "openworld_tshm.plugins.multispectral_rasterio:MultispectralRasterioPlugin"
field_csv = "openworld_tshm.plugins.field_csv:FieldCSVPlugin"
