[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "openworld-treehealth"
version = "0.1.0"
description = "Tree health assessment and species classification API with OpenAI agent integration."
readme = "README.md"
authors = [
  { name = "Nik Jois", email = "nikjois@llamasearch.ai" }
]
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.4",
  "openai>=1.40",
  "httpx>=0.27",
  "structlog>=24.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "anyio>=4.4",
  "ruff>=0.5.6",
  "mypy>=1.11.1",
  "types-requests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/openworld_treehealth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_api_*.py"]

[tool.ruff]
line-length = 100

